# serverless-performance

./: .gitignore  .prettierignore  README.md  invoke.js  package-lock.json  package.json  serverless.yml
go/: .prettierignore  Makefile  go.mod  main.go  package-lock.json  package.json  serverless.yml
node/: index.js  package-lock.json  package.json  serverless.yml
node-ts/: package-lock.json  package.json  serverless.yml
node-ts/src/: index.ts
rust/: Cargo.toml  package-lock.json  package.json  serverless.yml
rust/src/: main.rs
