[package]
name = "rust"
version = "0.1.0"
authors = ["Kyle DeTella <kdetella@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde = "1.0.118"
serde_json = "1.0"